@@ -1,5 +1,5 @@
 /*
- * Copyright 2010-2021 Australian Signals Directorate
+ * Copyright 2010-2024 Australian Signals Directorate
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -95,7 +95,7 @@ public class GraphVertex extends GraphElement {
         List<GraphStep> neighbours = streamNeighbours()
                 .filter(n -> !visited.contains(n.getDestinationVertex().getId()))
                 .filter(p)
-                .collect(Collectors.toList());
+                .toList();
         visited.addAll(neighbours.stream().map(n -> n.getDestinationVertex().getId()).collect(Collectors.toSet()));
         return Stream.concat(
                 neighbours.stream(),
