@@ -1,5 +1,5 @@
 /*
- * Copyright 2010-2021 Australian Signals Directorate
+ * Copyright 2010-2024 Australian Signals Directorate
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -37,7 +37,6 @@ import java.util.List;
 import java.util.Locale;
 import java.util.logging.Level;
 import java.util.logging.Logger;
-import java.util.stream.Collectors;
 import javax.swing.DefaultComboBoxModel;
 import javax.swing.ImageIcon;
 import javax.swing.JFrame;
@@ -391,7 +390,8 @@ public class GlyphsFrame extends JFrame {
         if (isZalgo) {
             final List<Integer> codepoints = new ArrayList<>();
             final int length = line.length();
-            for (int offset = 0; offset < length;) {
+            int offset = 0; 
+            while (offset < length) {
                 final int codepoint = line.codePointAt(offset);
                 final int cc = Character.charCount(codepoint);
 
@@ -411,7 +411,7 @@ public class GlyphsFrame extends JFrame {
 
     private static String[] loadText(final String fnam, final boolean raw) throws IOException {
         try (final BufferedReader in = new BufferedReader(new InputStreamReader(GlyphsFrame.class.getResourceAsStream(fnam), StandardCharsets.UTF_8))) {
-            final List<String> ls = in.lines().filter(line -> raw || (line.length() > 0 && !line.startsWith("#"))).collect(Collectors.toList());
+            final List<String> ls = in.lines().filter(line -> raw || (line.length() > 0 && !line.startsWith("#"))).toList();
             return ls.toArray(new String[ls.size()]);
         }
     }
@@ -427,7 +427,7 @@ public class GlyphsFrame extends JFrame {
         final ParsedFontInfo pfi = FontInfo.parseFontInfo(fontNames, GlyphManagerBI.DEFAULT_FONT_SIZE);
 
         if (!pfi.messages.isEmpty()) {
-            final String log = String.format("ParsedFontInfo message: %s\n", pfi.getMessages());
+            final String log = String.format("ParsedFontInfo message: %s%n", pfi.getMessages());
             LOGGER.log(Level.INFO, log);
         }
 
